Fixed footer z-index

--- a/style.css
+++ b/style.css
@@ -272,6 +272,7 @@ footer {
 
     padding: 16px;
     color: var(--color-primary);
+    z-index: 10;
 }
 
 footer span {
